k8s-dev/test-resources.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
---
