k8s-dev/patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-controller
spec:
  template:
    spec:
      containers:
        - name: project-controller
          image: project-controller:dev
          resources:
            requests: { }
            limits: { }
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: project-controller.project.aipub.ten1010.io
webhooks:
  - name: pods.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qWXdNekV4TURRMU16STRXaGNOTXpZd016QTRNRFExTXpJNApXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREppL1ZmVEpEQTR3djhDbHBzd2tYTGJxTUZBenB0ZlRNSTFwK3kKc1JFK1FXSEJXTHJHL1FMM29LSWFONForanVjYjZ0d0UrWEZ0Mm1DbThZRnlYb3NyZWJEWGEvSlFvSG9XOGxybgp2NHkvZEVLQ2lt [...]
  - name: deployments.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qWXdNekV4TURRMU16STRXaGNOTXpZd016QTRNRFExTXpJNApXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREppL1ZmVEpEQTR3djhDbHBzd2tYTGJxTUZBenB0ZlRNSTFwK3kKc1JFK1FXSEJXTHJHL1FMM29LSWFONForanVjYjZ0d0UrWEZ0Mm1DbThZRnlYb3NyZWJEWGEvSlFvSG9XOGxybgp2NHkvZEVLQ2lt [...]
  - name: namespaces.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qWXdNekV4TURRMU16STRXaGNOTXpZd016QTRNRFExTXpJNApXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREppL1ZmVEpEQTR3djhDbHBzd2tYTGJxTUZBenB0ZlRNSTFwK3kKc1JFK1FXSEJXTHJHL1FMM29LSWFONForanVjYjZ0d0UrWEZ0Mm1DbThZRnlYb3NyZWJEWGEvSlFvSG9XOGxybgp2NHkvZEVLQ2lt [...]
  - name: projects.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qWXdNekV4TURRMU16STRXaGNOTXpZd016QTRNRFExTXpJNApXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREppL1ZmVEpEQTR3djhDbHBzd2tYTGJxTUZBenB0ZlRNSTFwK3kKc1JFK1FXSEJXTHJHL1FMM29LSWFONForanVjYjZ0d0UrWEZ0Mm1DbThZRnlYb3NyZWJEWGEvSlFvSG9XOGxybgp2NHkvZEVLQ2lt [...]
  - name: imagereviews.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qWXdNekV4TURRMU16STRXaGNOTXpZd016QTRNRFExTXpJNApXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREppL1ZmVEpEQTR3djhDbHBzd2tYTGJxTUZBenB0ZlRNSTFwK3kKc1JFK1FXSEJXTHJHL1FMM29LSWFONForanVjYjZ0d0UrWEZ0Mm1DbThZRnlYb3NyZWJEWGEvSlFvSG9XOGxybgp2NHkvZEVLQ2lt [...]
  - name: userowner.project-controller.project.aipub.ten1010.io
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMvVENDQWVXZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFnTVI0d0hBWURWUVFEREJWd2NtOXEKWldOMExXTnZiblJ5YjJ4c1pYSXRZMkV3SGhjTk1qWXdNekV4TURRMU16STRXaGNOTXpZd016QTRNRFExTXpJNApXakFnTVI0d0hBWURWUVFEREJWd2NtOXFaV04wTFdOdmJuUnliMnhzWlhJdFkyRXdnZ0VpTUEwR0NTcUdTSWIzCkRRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRREppL1ZmVEpEQTR3djhDbHBzd2tYTGJxTUZBenB0ZlRNSTFwK3kKc1JFK1FXSEJXTHJHL1FMM29LSWFONForanVjYjZ0d0UrWEZ0Mm1DbThZRnlYb3NyZWJEWGEvSlFvSG9XOGxybgp2NHkvZEVLQ2lt [...]
---
